# sqlevaluator

./: Cargo.toml  README.md
src/: expr.rs  lib.rs  prepare.rs  row.rs  table.rs
