[package]
name = "sqlevaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { git = "https://github.com/jharris2268/sqlparser-rs.git", branch="main" }
regex = "1"
itertools = "0.10"

serde = { version = "1.0.*", features = ["derive"], optional = true }

[features]
with-serde = ["serde"]
